--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Senshan Sun's Homepage
+page-top-title: Senshan Sun
+top-section-bg-text: Welcome to Senshan Sun's Homepage
+home-subtitle: Senshan Sun&ensp;|&ensp;孙森山
+#copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
