--- a/contents/config.yml
+++ b/contents/config.yml
@@ -2,4 +2,4 @@ title: Senshan Sun's Homepage
 page-top-title: Senshan Sun
 top-section-bg-text: Welcome to Senshan Sun's Homepage
 home-subtitle: Senshan Sun&ensp;|&ensp;孙森山
-#copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
